# tg-ai

./: .pre-commit-config.yaml  pyproject.toml
docs/: design_doc.md
